tests/smt2/error/error_in_let.smt2
(assert (let ((a true)) b))
(assert a)